--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
 						<div class="exchange-form__crypto-block">
 							<span class="exchange-form__descrip">The cryptocerrency I own</span>
 							<ul class="exchange-wrap-own" id="currency-own">
-								<li class="exchange-wrap-own__item d-none">Bitcoin (btc)</li>
-								<li class="exchange-wrap-own__item d-none">Bitcoin (btc)</li>
-								<li class="exchange-wrap-own__item d-none">Ethereum (eth)</li>
-								<li class="exchange-wrap-own__item d-none">Ripple (xrp)</li>
-								<li class="exchange-wrap-own__item d-none">Bitcoin cash (btc)</li>
-								<li class="exchange-wrap-own__item d-none">Tether (usdt)</li>
-								<li class="exchange-wrap-own__item d-none">Oero (oeur)</li>
-								<li class="exchange-wrap-own__item d-none">Litecoin (ltc)</li>
+								<li class="exchange-wrap-own__item d-none">Bitcoin (BTC)</li>
+								<li class="exchange-wrap-own__item d-none">Bitcoin (BTC)</li>
+								<li class="exchange-wrap-own__item d-none">Ethereum (ETH)</li>
+								<li class="exchange-wrap-own__item d-none">Ripple (XRP)</li>
+								<li class="exchange-wrap-own__item d-none">Bitcoin cash (BCH)</li>
+								<li class="exchange-wrap-own__item d-none">Tether (USDT)</li>
+								<li class="exchange-wrap-own__item d-none">Oero (OEUR)</li>
+								<li class="exchange-wrap-own__item d-none">Litecoin (LTC)</li>
 								<li class="exchange-wrap-own__item d-none">Dash</li>
 								<li class="exchange-wrap-own__item d-none">EOS</li>
 							</ul>
