--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 			</nav>
 			<div class="header__content">
 				<div class="header__descrip">
-					<h3>exchange your money</h3>
+					<h3>exchange your crypto</h3>
 					<h3>in 2 easy steps</h3>
 					<div class="header__protection-block">
-						<span>We are fast and secure.</span>
+						<span>exchange your crypto to fiat money.</span>
 						<span>Our serveces are DDOS protected</span>
 					</div>
 				</div>
