--- a/index.html
+++ b/index.html
@@ -65,19 +65,19 @@
 							<span class="exchange-form__descrip">I want to</span>
 							<div class="currency-quantity">
 								<input class="currency-quantity__input" type="text" id="change-currency-quantity" pattern="[0-9],\,,\. ">
-								<span class="currency-quantity__text" id="change-quantity-text">Bitcoin (btc)</span>
+								<span class="currency-form__text" id="change-quantity-text">Bitcoin (BTC)</span>
 							</div>
 						</div>
 						<div class="exchange-form__quantity-block">
 							<span class="exchange-form__descrip">I will get</span>
 							<div class="currency-quantity">
 								<input class="currency-quantity__input" type="text" id="change-will-get-quantity" pattern="[0-9],\,,\. ">
-								<span class="currency-quantity__text" id="change-will-get-text">Bank (€)</span>
+								<span class="currency-form__text" id="change-will-get-text">Bank (€)</span>
 							</div>
 						</div>
 						<button class="exchange-form__button-next" id="exchange-next-step__btn">continue</button>
 					</div>
-					<div class="exchange-form__second-form" id="second-form">
+					<div class="exchange-form__second-form " id="second-form">
 						<div class="exchange-form__email-block">
 							<span class="exchange-form__descrip">Your email</span>
 							<input class="exchange-props-bank__input" type="text" id="input_email">
@@ -99,6 +99,42 @@
 							<input class="exchange-props-bank__input" type="text" id="input_account">
 						</div>
 						<button class="exchange-form__button-next" id="exchange-button">exchange</button>
+					</div>
+					<div class="exchange-form__third-form " id="second-form">
+						<div class="exchange-form__email-block">
+							<span class="exchange-form__descrip">Transfer</span>
+							<div class="exchange-props-bank__input exchange-props-bank__input_disabled">
+								<span class="exchange-form__descrip">100.000.000.000.000</span>
+								<span class="exchange-form__descrip exchange-form__descrip_gold">BTC</span>
+								<button class="exchange-form__btn-copy">copy</button>
+							</div>
+						</div>
+						<div class="exchange-form__wallet-adress-block">
+							<span class="exchange-form__descrip">To address</span>
+							<div class="exchange-props-bank__input exchange-props-bank__input_disabled">
+								<input class="exchange-form__descrip exchange-form__descrip_input" value="hghghvgjg352kghk4k5gk3sadasdasdasasdasdsa" disabled>
+								<button class="exchange-form__btn-copy">copy</button>
+							</div>
+						</div>
+						<div class="exchange-form__bank-block">
+							<span class="exchange-form__descrip">You will get</span>
+							<div class="exchange-props-bank__input exchange-props-bank__input_disabled">
+								<span class="exchange-form__descrip">100.000.000.000.000</span>
+								<span class="exchange-form__descrip exchange-form__descrip_gold">EUR</span>
+							</div>
+						</div>
+						<div class="exchange-form__swift-block">
+							<span class="exchange-form__descrip">To account</span>
+							<div class="exchange-props-bank__input exchange-props-bank__input_disabled" type="text">
+								<span class="exchange-form__descrip">1234567890123456</span>
+							</div>
+						</div>
+						<div class="exchange-form-block-text">
+							<span class="exchange-form-block-text__item">Pay the application before the end of rhis time</span>
+							<span class="exchange-form-block-text__item_active">23:16</span>
+						</div>
+						<button class="exchange-form__button-next" id="exchange-button">i paid</button>
+						<button class="exchange-form__button-next exchange-form__button-next_cancel" id="exchange-button_cancel">DELETE APPLICATION</button>
 					</div>
 					<div class="exchange-form-pointer">
 						<div class="exchange-form-pointer__item exchange-form-pointer__item_active"></div>
