--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Exo:400,500,700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/header.css">
 	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="css/media.css">
 </head>
 
 <body>
@@ -41,37 +42,37 @@
 						<div class="exchange-form__crypto-block">
 							<span class="exchange-form__descrip">The cryptocerrency I own</span>
 							<ul class="exchange-wrap-own" id="currency-own">
-								<li class="exchange-wrap-own__item d-none">Bitcoin (BTC)</li>
-								<li class="exchange-wrap-own__item d-none">Bitcoin (BTC)</li>
-								<li class="exchange-wrap-own__item d-none">Ethereum (ETH)</li>
-								<li class="exchange-wrap-own__item d-none">Ripple (XRP)</li>
-								<li class="exchange-wrap-own__item d-none">Bitcoin cash (BCH)</li>
-								<li class="exchange-wrap-own__item d-none">Tether (USDT)</li>
-								<li class="exchange-wrap-own__item d-none">Oero (OEUR)</li>
-								<li class="exchange-wrap-own__item d-none">Litecoin (LTC)</li>
-								<li class="exchange-wrap-own__item d-none">Dash</li>
-								<li class="exchange-wrap-own__item d-none">EOS</li>
+								<li class="exchange-wrap-own__item d-none" data-value="BTC" id="currency-own-value">Bitcoin (BTC)</li>
+								<li class="exchange-wrap-own__item d-none" data-value="BTC">Bitcoin (BTC)</li>
+								<li class="exchange-wrap-own__item d-none" data-value="ETH">Ethereum (ETH)</li>
+								<li class="exchange-wrap-own__item d-none" data-value="XRP">Ripple (XRP)</li>
+								<li class="exchange-wrap-own__item d-none" data-value="BCH">Bitcoin cash (BCH)</li>
+								<li class="exchange-wrap-own__item d-none" data-value="USDT">Tether (USDT)</li>
+								<li class="exchange-wrap-own__item d-none" data-value="OEUR">Oero (OEUR)</li>
+								<li class="exchange-wrap-own__item d-none" data-value="LTC">Litecoin (LTC)</li>
+								<li class="exchange-wrap-own__item d-none" data-value="DASH">Dash</li>
+								<li class="exchange-wrap-own__item d-none" data-value="EOS">EOS</li>
 							</ul>
 						</div>
 						<div class="exchange-form__currency-block">
 							<span class="exchange-form__descrip">The currency i want</span>
 							<ul class="exchange-wrap-want" id="currency-want">
-								<li class="exchange-wrap-want__item d-none">Bank (€)</li>
-								<li class="exchange-wrap-want__item d-none">Bank (€)</li>
-								<li class="exchange-wrap-want__item d-none">Bank ($)</li>
+								<li class="exchange-wrap-want__item d-none" data-value="EUR" id="currency-want-value">Bank (€)</li>
+								<li class="exchange-wrap-want__item d-none" data-value="EUR">Bank (€)</li>
+								<li class="exchange-wrap-want__item d-none" data-value="USD">Bank ($)</li>
 							</ul>
 						</div>
 						<div class="exchange-form__quantity-block">
 							<span class="exchange-form__descrip">I want to</span>
 							<div class="currency-quantity">
-								<input class="currency-quantity__input" type="text" id="change-currency-quantity" pattern="[0-9],\,,\. ">
+								<input class="currency-quantity__input" type="text" id="change-currency-quantity">
 								<span class="currency-form__text" id="change-quantity-text">Bitcoin (BTC)</span>
 							</div>
 						</div>
 						<div class="exchange-form__quantity-block">
 							<span class="exchange-form__descrip">I will get</span>
 							<div class="currency-quantity">
-								<input class="currency-quantity__input" type="text" id="change-will-get-quantity" pattern="[0-9],\,,\. ">
+								<input class="currency-quantity__input" type="text" id="change-will-get-quantity" disabled>
 								<span class="currency-form__text" id="change-will-get-text">Bank (€)</span>
 							</div>
 						</div>
