--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>X-Pay</title>
-
-	<link href="https://fonts.googleapis.com/css?family=Exo:400,500,700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="css/header.css">
-	<link rel="stylesheet" href="css/styles.css">
-	<link rel="stylesheet" href="css/media.css">
+	<link rel="icon" href="img/favicon.ico" type="image/x-icon"/>
+	<link href="https://fonts.googleapis.com/css?family=Exo:400,500,700&display=swap" rel="stylesheet"/>
+	<link rel="stylesheet" href="css/header.css"/>
+	<link rel="stylesheet" href="css/styles.css"/>
+	<link rel="stylesheet" href="css/media.css"/>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
 		<div class="header__wraper">
 			<nav class="navigation">
 				<div class="navigation__logo-block">
-					<img src="img/header/logo.png" alt="x-pay_logo" class="logo-img">
+					<img src="img/header/logo.png" alt="x-pay_logo" class="logo-img"/>
 				</div>
 				<ul class="navigation__link-block link-block">
 					<li class="link-block__item"><a href="index.html#header-sec">exchange page</a></li>
