--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 						<div class="exchange-form__quantity-block">
 							<span class="exchange-form__descrip">I want to</span>
 							<div class="currency-quantity">
-								<input class="currency-quantity__input" type="text" id="change-currency-quantity">
+								<input class="currency-quantity__input" type="number" step="0.00000001" id="change-currency-quantity">
 								<span class="currency-form__text" id="change-quantity-text">Bitcoin (BTC)</span>
 							</div>
 						</div>
@@ -150,6 +150,10 @@
 						<button class="exchange-form__button-next" id="exchange-button">i paid</button>
 						<button class="exchange-form__button-next exchange-form__button-next_cancel"
 							id="exchange-button_cancel">DELETE APPLICATION</button>
+					</div>
+					<div class="text-block">
+						<span class="text-block__color">You will get:</span>
+						<span class="text-block_dinamic">0</span>
 					</div>
 					<div class="exchange-form-pointer">
 						<div class="exchange-form-pointer__item exchange-form-pointer__item_active"></div>
