--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 						<div class="exchange-form__quantity-block">
 							<span class="exchange-form__descrip">I want to</span>
 							<div class="currency-quantity">
-								<input class="currency-quantity__input" type="number" step="0.00000001" id="change-currency-quantity">
+								<input class="currency-quantity__input" type="number" min="0" max="10" step="0.00000001" id="change-currency-quantity">
 								<span class="currency-form__text" id="change-quantity-text">Bitcoin (BTC)</span>
 							</div>
 						</div>
