--- a/index.html
+++ b/index.html
@@ -39,10 +39,9 @@
 				</div>
 				<div class="exchange-form">
 					<div class="exchange-form__first-form active ">
-						<div id="preloader" >
+						<!-- <div id="preloader" >
 							<div id="loader" class=" d-none"></div>
-						</div>
-						
+						</div> -->
 						<div class="exchange-form__crypto-block">
 							<span class="exchange-form__descrip">The cryptocerrency I own</span>
 							<ul class="exchange-wrap-own" id="currency-own">
