--- a/index.html
+++ b/index.html
@@ -110,20 +110,20 @@
 					<div class="exchange-form__third-form " id="second-form">
 						<div class="exchange-form__email-block">
 							<span class="exchange-form__descrip">Transfer</span>
-							<div class="exchange-props-bank__input exchange-props-bank__input_disabled">
-								<span class="exchange-form__descrip"
-									id="exchange-crypto-value">100.000.000.000.000</span>
+							<div class="exchange-props-bank__input exchange-props-bank__input_disabled" id="test">
+								<input class="exchange-form__descrip exchange-crypto-value"
+									id="exchange-crypto-value" value="10000000" type="text" >
 								<span class="exchange-form__descrip exchange-form__descrip_gold"
-									id="crypto-type">BTC</span>
-								<button class="exchange-form__btn-copy">copy</button>
+									id="crypto-type"></span>
+								<button class="exchange-form__btn-copy" id="btn-copy-transfer">copy</button>
 							</div>
 						</div>
 						<div class="exchange-form__wallet-adress-block">
 							<span class="exchange-form__descrip">To address</span>
 							<div class="exchange-props-bank__input exchange-props-bank__input_disabled">
 								<input class="exchange-form__descrip exchange-form__descrip_input"
-									value="hghghvgjg352kghk4k5gk3sadasdasdasasdasdsa" disabled>
-								<button class="exchange-form__btn-copy">copy</button>
+									value="hghghvgjg352kghk4k5gk3sadasdasdasasdasdsa" id="wallet-adress" disabled>
+								<button class="exchange-form__btn-copy" id="btn-copy-address">copy</button>
 							</div>
 						</div>
 						<div class="exchange-form__bank-block">
