--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
 							<span class="exchange-form__descrip">Transfer</span>
 							<div class="exchange-props-bank__input exchange-props-bank__input_disabled" id="test">
 								<input class="exchange-form__descrip exchange-crypto-value"
-									id="exchange-crypto-value" value="10000000" type="text" >
-								<span class="exchange-form__descrip exchange-form__descrip_gold"
-									id="crypto-type"></span>
+									id="exchange-crypto-value" value="10000000" type="text" disabled>
+								<!-- <span class="exchange-form__descrip exchange-form__descrip_gold"
+									id="crypto-type"></span> -->
 								<button class="exchange-form__btn-copy" id="btn-copy-transfer">copy</button>
 							</div>
 						</div>
